--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body {
   /* background-image: url("assets/World\ Map\ \(1\).svg"); */
   font-size: 25px;
-  background-image: url('assets/sprinkle.svg')
+  background-image: url("assets/sprinkle.svg");
 }
 a {
   color: white;
