--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ body {
   background-image: url("assets/sprinkle.svg");
   background-color: black;
 }
+.logo {
+  font-size: 1em;
+}
+#sambo {
+  font-size: 2em;
+}
+
+nav {
+  background-color: black;
+}
 a {
   color: white;
   font-size: 20px;
@@ -28,7 +38,6 @@ ul {
 }
 a:hover {
   color: var(--primarycolor);
-  border-bottom: 3px solid var(--primarycolor);
 }
 
 a:any-link {
@@ -47,8 +56,7 @@ a:any-link {
   background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
-  box-shadow: 0 0 20px 5px var(--primarycolor),
-    0 0 20px 5px var(--secondarycolor);
+  box-shadow: 0 0 20px 5px blue, 0 0 20px 5px red;
   background-image: url("  assets/1651688434720-removebg-preview.png ");
 }
 
@@ -86,9 +94,9 @@ progress:hover {
   accent-color: green;
 }
 
-.ludo-img {
-  width: 400px;
-  height: 300px;
+.carousel-container img {
+  width: 100vh;
+  height: 600px;
 }
 input {
   width: 500px;
@@ -115,7 +123,7 @@ textarea:focus {
   body {
     font-size: 16px;
   }
-  a {
+  nav a {
     color: white;
     font-size: 12px;
     text-align: left;
@@ -147,6 +155,9 @@ textarea:focus {
     align-items: center;
     display: none;
   }
+  .carousel-container img {
+    height: 200px;
+  }
   .section-two {
     left: 0;
   }
@@ -162,17 +173,22 @@ textarea:focus {
   input {
     width: 80vw;
   }
-  footer {
+  footer a {
     font-size: x-small;
+    padding: 0;
+    border-bottom: none;
   }
   footer img {
-    width: 15px;
+    width: 10px;
+  }
+  footer img:hover {
+    background-color: var(--primarycolor);
   }
 }
 
 @keyframes example2 {
   0% {
-    transform: translateX(200%);
+    transform: translateX(100%);
   }
   100% {
     transform: translateX(0%);
