--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 body {
   font-size: 25px;
-  background-image: url("assets/sprinkle.svg");
+  background-image: url("assets/Sprinkle.svg");
   background-color: black;
 }
 .logo {
