--- a/style.css
+++ b/style.css
@@ -139,7 +139,9 @@ input {
 footer img:hover {
   transform: rotate(180deg);
 }
-
+#time {
+  font-style: italic;
+}
 @media screen and (max-width: 768px) {
   body {
     font-size: 16px;
