changed the primary color

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primarycolor: yellow;
+  --primarycolor: rgb(211, 50, 171);
   --secondarycolor: rgb(67, 67, 172);
   --primaryfontsize: 1.2em;
   /* --gridcolors: #1e1e1e; */
